// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query.projects connection fetches the public and private projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "contributors": Object {
            "totalCount": 41,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "title": "Croissance, innovation, disruption",
          "votes": Object {
            "totalCount": 10,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "contributors": Object {
            "totalCount": 5,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Mg==",
          "title": "Stratégie technologique de l'Etat et services publics",
          "votes": Object {
            "totalCount": 1,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Mw==",
          "title": "Transformation numérique des relations",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0NA==",
          "title": "Projet vide",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "contributors": Object {
            "totalCount": 80,
          },
          "id": "UHJvamVjdDpwcm9qZWN0NQ==",
          "title": "Projet de loi Renseignement",
          "votes": Object {
            "totalCount": 134,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "contributors": Object {
            "totalCount": 49,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Ng==",
          "title": "Budget Participatif Rennes",
          "votes": Object {
            "totalCount": 49,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Nw==",
          "title": "Dépot avec selection vote budget",
          "votes": Object {
            "totalCount": 1,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "contributors": Object {
            "totalCount": 4,
          },
          "id": "UHJvamVjdDpwcm9qZWN0OA==",
          "title": "Projet avec questionnaire",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "contributors": Object {
            "totalCount": 50,
          },
          "id": "UHJvamVjdDpwcm9qZWN0OQ==",
          "title": "Appel à projets",
          "votes": Object {
            "totalCount": 50,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTA=",
          "title": "Dépôt avec selection vote simple",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTE=",
          "title": "Budget avec vote limité",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTI=",
          "title": "Projet sans étapes participatives",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTM=",
          "title": "Projet avec une étape de participation en continue",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTQ=",
          "title": "Projet à venir",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "contributors": Object {
            "totalCount": 2,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTU=",
          "title": "BP avec vote classement",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTY=",
          "title": "Le P16 un projet à base de riz",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE2",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvckFkbWluT25seQ==",
          "title": "Qui doit conquérir le monde ? | Visible par les admins seulement",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE3",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpQcm9qZWN0QWNjZXNzaWJsZUZvck1lT25seUJ5QWRtaW4=",
          "title": "Project pour la création de la capCoBeer (visible par admin seulement)",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE4",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpQcm9qZWN0V2l0aEN1c3RvbUFjY2Vzcw==",
          "title": "Un avenir meilleur pour les nains de jardins (custom access)",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE5",
        "node": Object {
          "contributors": Object {
            "totalCount": 69,
          },
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3Q=",
          "title": "Projet externe",
          "votes": Object {
            "totalCount": 86,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjIw",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3RXaXRob3V0Q291bnRlcg==",
          "title": "Projet externe sans compteur",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjIx",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MjE=",
          "title": "Questions/Responses",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjIx",
      "hasNextPage": false,
    },
    "totalCount": 22,
  },
}
`;

exports[`Query.projects connection fetches the public projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "contributors": Object {
            "totalCount": 41,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MQ==",
          "title": "Croissance, innovation, disruption",
          "votes": Object {
            "totalCount": 10,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "contributors": Object {
            "totalCount": 5,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Mg==",
          "title": "Stratégie technologique de l'Etat et services publics",
          "votes": Object {
            "totalCount": 1,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Mw==",
          "title": "Transformation numérique des relations",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0NA==",
          "title": "Projet vide",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "contributors": Object {
            "totalCount": 80,
          },
          "id": "UHJvamVjdDpwcm9qZWN0NQ==",
          "title": "Projet de loi Renseignement",
          "votes": Object {
            "totalCount": 134,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "contributors": Object {
            "totalCount": 49,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Ng==",
          "title": "Budget Participatif Rennes",
          "votes": Object {
            "totalCount": 49,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpwcm9qZWN0Nw==",
          "title": "Dépot avec selection vote budget",
          "votes": Object {
            "totalCount": 1,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "contributors": Object {
            "totalCount": 4,
          },
          "id": "UHJvamVjdDpwcm9qZWN0OA==",
          "title": "Projet avec questionnaire",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "contributors": Object {
            "totalCount": 50,
          },
          "id": "UHJvamVjdDpwcm9qZWN0OQ==",
          "title": "Appel à projets",
          "votes": Object {
            "totalCount": 50,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTA=",
          "title": "Dépôt avec selection vote simple",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTE=",
          "title": "Budget avec vote limité",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTI=",
          "title": "Projet sans étapes participatives",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTM=",
          "title": "Projet avec une étape de participation en continue",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTQ=",
          "title": "Projet à venir",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "contributors": Object {
            "totalCount": 2,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTU=",
          "title": "BP avec vote classement",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MTY=",
          "title": "Le P16 un projet à base de riz",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE2",
        "node": Object {
          "contributors": Object {
            "totalCount": 69,
          },
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3Q=",
          "title": "Projet externe",
          "votes": Object {
            "totalCount": 86,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE3",
        "node": Object {
          "contributors": Object {
            "totalCount": 0,
          },
          "id": "UHJvamVjdDpleHRlcm5hbFByb2plY3RXaXRob3V0Q291bnRlcg==",
          "title": "Projet externe sans compteur",
          "votes": Object {
            "totalCount": 0,
          },
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE4",
        "node": Object {
          "contributors": Object {
            "totalCount": 3,
          },
          "id": "UHJvamVjdDpwcm9qZWN0MjE=",
          "title": "Questions/Responses",
          "votes": Object {
            "totalCount": 3,
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE4",
      "hasNextPage": false,
    },
    "totalCount": 19,
  },
}
`;
